--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
     "version": 2,
-    "builds": [{ "src": "./server.js", "use": "@vercel/node" }],
+    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
     "routes": [
-        { "src": "/(.*)", "dest": "/" }
-
+        { "src": "/", "dest": "/" },
+        { "src": "/api/getplayers", "dest": "/" },
+        { "src": "/api/postplayer", "dest": "/" },
+        { "src": "/api/deleteplayers", "dest": "/" },
+        { "src": "/challenge/getstatus", "dest": "/"},
+        { "src": "/challenge/start", "dest": "/" },
+        { "src": "/challenge/stop", "dest": "/" },
+        { "src": "/challenge/postvalues", "dest": "/" },
+        { "src": "/challenge/getvalues", "dest": "/" },
+        { "src": "/challenge/gettime", "dest": "/" },
+        { "src": "/challenge/posttime", "dest": "/" }
       ]
 }
