--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
       { "src": "/player/postPlayer", "dest": "/" },
-      { "src": "/player/getPlayer", "dest": "/" },
+      { "src": "/player/getPlayer", "dest": "/player/getPlayer" },
       { "src": "/player/deletePlayer", "dest": "/" },
       { "src": "/test/postCreate", "dest": "/" },
       { "src": "/test/postSet", "dest": "/" },
