--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
+      { "src": "/", "dest": "/" },
       { "src": "/player/postPlayer", "dest": "/" },
       { "src": "/player/getPlayer", "dest": "/player/getPlayer" },
       { "src": "/player/deletePlayer", "dest": "/" },
