--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET='GOIABADO'
-MONGODB_CONNECT_URI=mongodb+srv://rntmendes11:forms1234@cluster0.zxm1sod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_CONNECT_URI='mongodb+srv://rntmendes11:forms1234@cluster0.zxm1sod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
